# CrossplatformChat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  functions.cmake  generate_project.sh  startClient.bat  startClient.sh  startServer.bat  startServer.sh
client/: CMakeLists.txt
client/include/: Client.hpp  WrongMessageException.hpp
client/include/CheckResponders/: AppCheckResponder.hpp  CreateResponseException.hpp  ModAppCheckResponder.hpp
client/include/Displayer/: ConsoleDisplayer.hpp  Displayer.hpp  DisplayerException.hpp
client/include/Reader/: ConsoleReader.hpp  Reader.hpp  ReaderDelegate.hpp
client/src/: main.cpp
libchat/: CMakeLists.txt
libchat/include/: BaseException.hpp  BasicMessageHandler.hpp  BasicMessageType.hpp  BasikMessageType.hpp  Connection.hpp  ConnectionDelegate.hpp  ConnectionManager.hpp  ConnectionManagerDelegate.hpp  ConsoleLogger.hpp  Consts.hpp  Delegate.hpp  Exceptions.hpp  Logger.hpp  LoggerMessageType.hpp  Message.hpp  MessageConverter.hpp  MessageHandler.hpp  MessageTypesDescsGetters.hpp  MessageTypesGeneralFuncs.hpp  RegularMessageType.hpp  ResponderChainNode.hpp  TCPConnection.hpp  TSQueue.hpp  TextHandlerDelegate.hpp  UniversalMessage.hpp  VectorExtensions.hpp
libchat/include/Connection/: Connection.hpp  ConnectionManager.hpp  TCPConnection.hpp
libchat/include/Connection/Delegates/: ConnectionDelegate.hpp  ConnectionManagerDelegate.hpp
libchat/include/Connection/Exceptions/: ConnectionException.hpp
libchat/include/Functions/: ModFunction.hpp
libchat/include/FunctionsForCheckingApp/: ModAppCheckFunction.hpp
libchat/include/Logger/: ConsoleLogger.hpp  Logger.hpp
libchat/include/Messages/: Message.hpp  UniversalMessage.hpp
libchat/include/Messages/Handlers/: BasicMessageHandler.hpp  ConnectionMessageHandler.hpp  MessageHandler.hpp  RegularMessageHandler.hpp
libchat/include/Messages/Handlers/Delegates/: BasicMessageHandlerDelegate.hpp  ConnectionMessageHandlerDelegate.hpp  RegularMessageHandlerDelegate.hpp
libchat/include/Messages/Types/: BasicMessageType.hpp  ConnectionMessageType.hpp  DescriptionException.hpp  MessageTypesFuncs.hpp  MessageTypesGeneralFuncs.hpp  RegularMessageType.hpp
libchat/include/ThreadSafe/: TSQueue.hpp  TSUnorderedMap.hpp
server/: CMakeLists.txt
server/include/: ServerDelegate.hpp
server/include/ClientsManager/: ClientManagerDelegate.hpp  ClientsManager.hpp  ClientsManagerDelegate.hpp
server/include/ClientsValidator/: ClientsValidator.hpp  ClientsValidatorDelegate.hpp
server/include/ClientsValidator/CheckCreater/: AppCheckCreater.hpp  NumAppCheckCreater.hpp
server/include/ClientsValidator/CheckInspector/: AppCheckInspector.hpp  ModAppCheckInspector.hpp
src/: CMDArgsHelpers.cpp  CMDArgsHelpers.hpp  CMakeLists.txt  Client.hpp  Connection.hpp  Helpers.cpp  Helpers.hpp  LaunchOptions.hpp  Message.hpp  PossibleIDs.hpp  Runnable.hpp  Server.hpp  TSQueue.hpp  main.cpp
